--- a/style.css
+++ b/style.css
@@ -1,13 +1,68 @@
+
 body{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
     padding: 50px 0px;
+    background-color: #eeeeee;
     
 }
 
 
 .calculator{
+    
+    min-width: 350px;
+    height: 400px;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    height: 20%;
+    width: 100%;
+    
+    
+}
+
+#zero{
+    flex: 2;
+}
+
+
+
+button{
+    flex: 1;
+    padding: 0px;
+    background-color: #00796b;
+    border: 0px;
+    color: white;
+    font-size: 16px;
+    font-weight: 900;
+    width: 100%;
+    
+}
+
+.buttons{
     border: 2px solid black;
+    height: 80%;
+    border-top: 0px;
+}
+.display{
+    height: 20%;
+    font-size: 40px;
+    text-align: right;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    border: 2px solid black;
+    border-bottom: 0px;
+    background-color:#f2f2f2;
+}
+
+#operator{
+    background-color: #4a4a4a;
+}
+
+#top{
+    background-color: #333333;
 }
